--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,7 +1,10 @@
 .status-bar {
+  width: 100%;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   padding: 5px 3px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .status-bar__column {
