--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;1,400&display=swap");
 @import "reset.css";
-@import "status-bar.css";
+@import "variables.css";
+
+/* Components */
+@import "components/status-bar.css";
+@import "components/nav.css";
+@import "components/header.css";
+@import "components/user-component.css";
+@import "components/badge.css";
+/* Screens */
+@import "screens/login.css";
+@import "screens/friends.css";
+@import "screens/find.css";
 
 body {
   background-color: white;
-  color: black;
+  color: #2e363e;
   font-family: "Open Sans", sans-serif;
+  height: 1000vh;
 }
 
-.welcome-header {
-  margin: 90px 0px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.welcome-header__title {
-  margin-bottom: 20px;
-  font-size: 25px;
-}
-
-.welcome-header__text {
-  width: 60%;
-  opacity: 0.7;
+.main-screen {
+  margin: 0px var(--horizontal-space);
 }
