--- a/homework/DAY11_homework/style.css
+++ b/homework/DAY11_homework/style.css
@@ -27,7 +27,8 @@ header i {
   box-shadow: 0px 2px 5px gray;
   width: 300px;
   bottom: -20px;
-  left: 25px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 input {
   border: none;
