--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -5,6 +5,9 @@
   justify-content: center;
   padding: 5px 3px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0px;
+  z-index: 1;
 }
 
 .status-bar__column {
