--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
 @import "screens/settings.css";
 @import "screens/chat.css";
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: white;
   color: #2e363e;
@@ -28,4 +32,9 @@ body {
 
 .main-screen {
   margin: 0px var(--horizontal-space);
+}
+
+.screen-header,
+.alt-header {
+  padding-top: 40px;
 }
