--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -1,4 +1,5 @@
 .nav {
+  margin-top: 50px;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -18,10 +19,23 @@
   position: relative;
 }
 
+@keyframes noticeAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-2px) rotateY(180deg);
+  }
+  100% {
+    transform: none;
+  }
+}
+
 .nav__notice {
   position: absolute;
   left: 15px;
   bottom: 15px;
+  animation: noticeAnimation 2s ease-in-out infinite;
 }
 
 .nav__dots-notice {
@@ -37,4 +51,33 @@
   position: absolute;
   right: -5px;
   top: -15px;
+  animation: noticeAnimation 2s ease-in-out infinite;
+}
+
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.nav__btn {
+  transform: translateY(50px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.nav__btn:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+.nav__btn:last-child {
+  animation-delay: 0.9s;
 }
