--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -98,3 +98,23 @@
 .open-post__heart-count span {
   margin-left: 5px;
 }
+
+@keyframes hearbeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(3);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+.open-post__heart-count:hover i {
+  will-change: transform;
+  animation: hearbeat 1s linear infinite;
+}
